[package]
name = "mindblown"
version = "0.4.1"
description = "Brainfuck to x86 ELF compiler with batteries included."
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "3.2.20", features = ["cargo"] }
snailquote = "0.3.1"
rand = "0.8.5"
dunce = "1.0.2"
subprocess = "0.2.9"
colored = "2.0.0"

[profile.release]
lto = true
opt-level = 2
